Fixed width in for the label of "user_terms" because it doesn't fit in ffox and IE

--- a/app/assets/stylesheets/_app/_community/_partials/_user.sass
+++ b/app/assets/stylesheets/_app/_community/_partials/_user.sass
@@ -260,7 +260,7 @@
     float: left
   .field__label.boolean
     margin-left: 12px
-    width: 405px
+    width: 400px
   .input--text
     -moz-box-sizing: border-box; // Fix for firefox
 
